PCS BAckup 26Dec2023/Backup-Source/objects/Phoenix_PHS_Data__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Phoenix_Account_Id__c</fullName>
        <label>Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Apexus_Contract_Id__c</fullName>
        <label>Apexus Contract Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Record_Type_Id__c</fullName>
        <label>Record Type Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PHS Data</label>
</CustomObject>